crates/api/tests/snapshots/wire_snapshots__scan_error.snap
---
source: crates/api/tests/wire_snapshots.rs
expression: "ScanError { path: \"/x\".into(), message: \"boom\".into() }"
---
{
  "path": "/x",
  "message": "boom"
}
