crates/api/tests/snapshots/wire_snapshots__scan_req.snap
---
source: crates/api/tests/wire_snapshots.rs
expression: "ScanReq { folder: \"/lib\".into() }"
---
{
  "folder": "/lib"
}
