crates/api/tests/snapshots/wire_snapshots__sibling_dto.snap
---
source: crates/api/tests/wire_snapshots.rs
expression: "SiblingDto { bad: \"samus_aran\".into(), ideal: \"character:samus\".into() }"
---
{
  "bad": "samus_aran",
  "ideal": "character:samus"
}
