crates/api/tests/snapshots/wire_snapshots__sibling_remove_req.snap
---
source: crates/api/tests/wire_snapshots.rs
expression: "SiblingRemoveReq { bad: \"samus_aran\".into() }"
---
{
  "bad": "samus_aran"
}
