crates/api/tests/snapshots/wire_snapshots__source_import_req_full.snap
---
source: crates/api/tests/wire_snapshots.rs
expression: "SourceImportReq { plugin_id: \"hydrus\".into(), library_only: false }"
---
{
  "plugin_id": "hydrus",
  "library_only": false
}
