crates/api/tests/snapshots/wire_snapshots__source_import_req_library_only.snap
---
source: crates/api/tests/wire_snapshots.rs
expression: "SourceImportReq { plugin_id: \"hydrus\".into(), library_only: true }"
---
{
  "plugin_id": "hydrus",
  "library_only": true
}
